style: fix/prevent price text shift when click 'add to cart' btn -> reduce add-to-cart btn padding/text-size, add 2nd ver. of decrementCartItem to cartSlice (after each action/reducer manual calc. total?)

--- a/src/scss/components/_pizza-card.scss
+++ b/src/scss/components/_pizza-card.scss
@@ -72,13 +72,13 @@
 
     .pizza-price {
       font-weight: 700;
-      font-size: 22px;
+      font-size: 21px;
       letter-spacing: 0.015em;
       line-height: 27px;
     }
 
     .add-cart-btn {
-      padding: 10px 20px; // TODO: add button padding to normalize scss ?
+      padding: 10px 15px; // TODO: add button padding to normalize scss ?
       border: 1px solid $orange;
       border-radius: 30px; // TODO: button normalize scss ?
       color: $orange;
